[package]
name = "skelta"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
futures-util = "0.3.32"
ignore = "0.4.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tree-sitter = "0.26.10"
tree-sitter-rust = "0.24.2"
sha2 = "0.10.8"
